[package]
name = "ratelimit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
 version = "1.6"
 features = ["attributes"]
 
[dependencies]
mock_instant = "0.2.1"
futures = "0.3"
regex = "1"
lazy_static = "1.4.0"
rayon = "1.5.3"
